--- a/winter/204B/2020/02/20200210.tex
+++ b/winter/204B/2020/02/20200210.tex
@@ -26,9 +26,9 @@ Notice that for a function with a simple pole,
 \begin{equation}
     f= \frac{a_{-1}}{z-z_i} + f_A,
 \end{equation}
-we can very easily compute the residue by
+we can easily compute the residue by
 \begin{equation}
-    (z-z_i)f|_{z\to z_i} = a_{-1} + f_A*(z-z_i)|_{z\to z_i} = a_{-1}.
+    (z-z_i)f|_{z\to z_i} = a_{-1} + (z-z_i)f_A|_{z\to z_i} = a_{-1}.
 \end{equation}
 The residue of a pole of order $n$ is a little more complicated, but not much. If we have
 \begin{equation}
