--- a/winter/204B/2020/02/20200214.tex
+++ b/winter/204B/2020/02/20200214.tex
@@ -26,7 +26,7 @@ where $Q$ is some constant offset. This is true for $z$ or $z_0$, so when we ext
 \subsection*{Trigonometric integrals by contour integration}
 Suppose we have some trigonometric integral
 \begin{equation}
-    \int_0^{2\pi} f(sin\phi, \cos\phi)d\phi.
+    \int_0^{2\pi} f(\sin\phi, \cos\phi)d\phi.
 \end{equation}
 Well, we can easily rewrite
 \begin{equation}
