Updates from Overleaf

--- a/winter/204B/2020/02/20200205.tex
+++ b/winter/204B/2020/02/20200205.tex
@@ -1,3 +1,9 @@
+\begin{quote}
+    \textit{``Now the little beam-me-up-Scotty elevator is only this segment here to here. The only way to take the elevator is to close the loop around one only.''}
+    
+    ---Nemanja Kaloper
+\end{quote}
+
 Last time, we introduced branch points and branch cuts. Branch cuts tell us where we cross from one copy of the complex plane (Riemann sheet) to another.
 
 A natural question to ask is where we should put our branch cut. In fact, it doesn't matter so long as our branch cut connects branch points. Notice for instance that $\sqrt{z}$ has a branch point at $0$, and it is also singular at the point at infinity. The placement of the branch cut is equivalent to us picking the fundamental domain of the Fourier series, as $0,2\pi$ or $-\pi,\pi$.
