--- a/winter/204B/2020/02/20200210.tex
+++ b/winter/204B/2020/02/20200210.tex
@@ -1,4 +1,9 @@
 %What's your favorite Fourier series? They're all the same.
+\begin{quote}
+    \textit{``What's your favorite Fourier series?'' ``They're all the same.''}
+    
+    ---Mark Samuel Abbott and Nemanja Kaloper
+\end{quote}
 
 \begin{note}
     As a logistical point, there will be no Green's functions on the midterm. The focus will be on Fourier series and complex analysis.
