--- a/winter/204B/204B-notes-ucd.tex
+++ b/winter/204B/204B-notes-ucd.tex
@@ -58,18 +58,17 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
 \section{Friday, February 14, 2020}
     \input{2020/02/20200214.tex}
     
-% % week 7
-% % February 17, Presidents' Day
-% \section{Wednesday, February 19, 2020}
-%     \input{2020/02/20200219.tex}
-% \section{Friday, February 21, 2020}
-%     \input{2020/02/20200221.tex}
+% week 7
+% February 17, Presidents' Day
+% February 19, midterm
+\section{Friday, February 21, 2020}
+    \input{2020/02/20200221.tex}
 
-% % week 8
-% \section{Monday, February 24, 2020}
-% 	\input{2020/02/20200224.tex}
-% \section{Wednesday, February 26, 2020}
-%     \input{2020/02/20200226.tex}
+% week 8
+\section{Monday, February 24, 2020}
+	\input{2020/02/20200224.tex}
+\section{Wednesday, February 26, 2020}
+    \input{2020/02/20200226.tex}
 % \section{Friday, February 28, 2020}
 %     \input{2020/02/20200228.tex}
 
