--- a/winter/200B/200B-notes-ucd.tex
+++ b/winter/200B/200B-notes-ucd.tex
@@ -51,7 +51,14 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
 %week 7
 \section{Tuesday, February 18, 2020}
     \input{2020/02/20200218.tex}
+\section{Thursday, February 20. 2020}
+    \input{2020/02/20200220.tex}
 
+%week 8
+\section{Tuesday, February 25, 2020}
+    \input{2020/02/20200225.tex}
+\section{Thursday, February 27, 2020}
+    \input{2020/02/20200227.tex}
 % \newpage
 % \section{Equation Quick Reference}
 %     \input{2020/reference_sheet.tex}
