Updates from Overleaf

--- a/winter/204B/204B-notes-ucd.tex
+++ b/winter/204B/204B-notes-ucd.tex
@@ -69,8 +69,8 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
 	\input{2020/02/20200224.tex}
 \section{Wednesday, February 26, 2020}
     \input{2020/02/20200226.tex}
-% \section{Friday, February 28, 2020}
-%     \input{2020/02/20200228.tex}
+\section{Friday, February 28, 2020}
+    \input{2020/02/20200228.tex}
 
 % % week 9
 % \section{Monday, March 2, 2020}
