Notes for 2/28. Conformal mappings.

--- a/winter/204B/2020/02/20200228.tex
+++ b/winter/204B/2020/02/20200228.tex
@@ -125,7 +125,7 @@ Suppose we have a function $f(z)$ which is analytic. Then its derivative with re
 \begin{proof}
     Recall that
     \begin{equation}
-        z=x+iy, z^* = x-iy.
+        z=x+iy, \quad z^* = x-iy.
     \end{equation}
     Thus
     \begin{equation}
