Updates from Overleaf

--- a/winter/204B/204B-notes-ucd.tex
+++ b/winter/204B/204B-notes-ucd.tex
@@ -72,9 +72,9 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
 \section{Friday, February 28, 2020}
     \input{2020/02/20200228.tex}
 
-% % week 9
-% \section{Monday, March 2, 2020}
-% 	\input{2020/03/20200302.tex}
+% week 9
+\section{Monday, March 2, 2020}
+	\input{2020/03/20200302.tex}
 % \section{Wednesday, March 4, 2020}
 %     \input{2020/02/20200304.tex}
 % \section{Friday, March 6, 2020}
