Updates from Overleaf

--- a/winter/200B/200B-notes-ucd.tex
+++ b/winter/200B/200B-notes-ucd.tex
@@ -59,6 +59,12 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
     \input{2020/02/20200225.tex}
 \section{Thursday, February 27, 2020}
     \input{2020/02/20200227.tex}
+
+%week 9
+\section{Tuesday, March 3, 2020}
+    \input{2020/03/20200303.tex}
+%no lecture Thursday, March 5: Rena out of town
+
 % \newpage
 % \section{Equation Quick Reference}
 %     \input{2020/reference_sheet.tex}
