--- a/winter/204B/204B-notes-ucd.tex
+++ b/winter/204B/204B-notes-ucd.tex
@@ -75,17 +75,17 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
 % week 9
 \section{Monday, March 2, 2020}
 	\input{2020/03/20200302.tex}
-% \section{Wednesday, March 4, 2020}
-%     \input{2020/02/20200304.tex}
+\section{Wednesday, March 4, 2020}
+    \input{2020/03/20200304.tex}
 % \section{Friday, March 6, 2020}
-%     \input{2020/02/20200306.tex}
+%     \input{2020/03/20200306.tex}
 
 % % week 10
 % \section{Monday, March 9, 2020}
 % 	\input{2020/03/20200309.tex}
 % \section{Wednesday, March 11, 2020}
-%     \input{2020/02/20200311.tex}
+%     \input{2020/03/20200311.tex}
 % \section{Friday, March 13, 2020}
-%     \input{2020/02/20200313.tex}
+%     \input{2020/03/20200313.tex}
 
 \end{document}
