Commits through March 6 (convolutions/Faltung)

--- a/winter/204B/204B-notes-ucd.tex
+++ b/winter/204B/204B-notes-ucd.tex
@@ -77,8 +77,8 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
 	\input{2020/03/20200302.tex}
 \section{Wednesday, March 4, 2020}
     \input{2020/03/20200304.tex}
-% \section{Friday, March 6, 2020}
-%     \input{2020/03/20200306.tex}
+\section{Friday, March 6, 2020}
+    \input{2020/03/20200306.tex}
 
 % % week 10
 % \section{Monday, March 9, 2020}
