Minor edits to E&M

--- a/winter/200B/200B-notes-ucd.tex
+++ b/winter/200B/200B-notes-ucd.tex
@@ -65,6 +65,10 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
     \input{2020/03/20200303.tex}
 %no lecture Thursday, March 5: Rena out of town
 
+%week 10
+\section{Tuesday, March 10, 2020}
+    \input{2020/03/20200310.tex}
+
 % \newpage
 % \section{Equation Quick Reference}
 %     \input{2020/reference_sheet.tex}
