--- a/winter/200B/2020/01/20200114.tex
+++ b/winter/200B/2020/01/20200114.tex
@@ -93,7 +93,7 @@ The reason for this is that our potential far away can be built out of solutions
     \varphi(\vec r) = \frac{1}{4\pi \epsilon_0} \sum_{l=0}^\infty \sum_{m=-l}^l \frac{A_{lm}}{r^{l+1}} Y_{lm}(\theta,\phi).
 \end{equation}
 It's perhaps not so surprising that the spherical harmonics arise like this. Moreover, if we think about how many $A_{lm}$ we get for fixed $l$, there are $2l+1$ choices for $m$. That is, the quadrupole moment, which corresponds to $l=2$, really should have five independent components.%
-    \footnote{There's also a second solution to Laplace's equation scaling as $r^l$, but those solutions diverge as $r\to \infty$, so they represent interior rather than exterior solutions.}
+    \footnote{There's also a second solution to Laplace's equation scaling as $r^l$, but those solutions diverge as $r\to \infty$, so they represent interior rather than exterior solutions. The $r^l$ solutions are regular at the origin, while the $1/r^{l+1}$ solutions are regular at infinity.}
 
 For $l=3$, we expect $2l+1=7$ components. From the Cartesian perspective, there are a priori $3\times 3 \times 3=27$ components. However, $Q_{ijk} = Q_{jik}$ and so on. Hence we get some different sets of components. 
 
