--- a/winter/200B/2020/01/20200116.tex
+++ b/winter/200B/2020/01/20200116.tex
@@ -91,8 +91,7 @@ Last time, we saw that
 The interior solution for Laplace's equation (i.e. the one that doesn't diverge as $r\to 0$) just replaces $\frac{r'{}^l}{r^{l+1}} \to \frac{r^l}{(r')^{l+1}},$ and then the $A_{lm}$s are modified.
 
 \subsection*{Conductors}
-For our purposes, we will use the terms conductors and metals interchangeably. The charge carriers in a conductor reorganize themselves to respond to external applied fields. Specifically, they configure themselves so that the electric field inside is zero (equivalently, this minimizes the energy in the field). Thus $\vec E = 0$ inside. On the surface, the electric field is perpendicular to the surface. If this weren't the case, the charge would reshuffle to cancel this.%
-    \footnote{At least in the absence of an external magnetic field.}
+For our purposes, we will use the terms conductors and metals interchangeably. The charge carriers in a conductor reorganize themselves to respond to external applied fields. Specifically, they configure themselves so that the electric field inside is zero (equivalently, this minimizes the energy in the field). Thus $\vec E = 0$ inside. On the surface, the electric field is perpendicular to the surface. If this weren't the case, the charges would reshuffle to cancel any parallel component.
 To sum up,
 \begin{gather}
     \vec E = 0 \text{ inside},\\
