--- a/winter/200B/2020/01/20200123.tex
+++ b/winter/200B/2020/01/20200123.tex
@@ -36,9 +36,9 @@ Now we can calculate the energy in the capacitor as
 \end{equation}
 Notice that if we have two conductors, this integral simplifies considerably. Suppose we have one conductor with a surface $S_1$ and a charge $+Q$ and another conductor with a surface $S_2$ and a charge $-Q$. Conductors are equipotentials, and it follows that since all the charge lies on the surface, the integral becomes
 \begin{equation}
-    U= \frac{1}{2} \bkt{\int_{S_1} d^2 S \sigma_+(\vec r) V_+ + \int_{S_2} d^2S \sigma_-(\vec r) V_-} = \frac{1}{2} \bkt{V_+ Q + V_- (-Q)} = \frac{1}{2} QV.
+    U= \frac{1}{2} \bkt{\int_{S_1} d^2 S \sigma_+(\vec r) V_+ + \int_{S_2} d^2S \sigma_-(\vec r) V_-} = \frac{1}{2} \bkt{V_+ Q + V_- (-Q)} = \frac{1}{2} QV,
 \end{equation}
-We can rewrite this as
+since $V=V_+ - V_-$ is the difference in the potentials. We can rewrite this as
 \begin{equation}
     U= \frac{1}{2} \frac{Q^2}{C} = \frac{1}{2} CV^2,
 \end{equation}
