--- a/winter/200B/2020/02/20200220.tex
+++ b/winter/200B/2020/02/20200220.tex
@@ -13,7 +13,7 @@ where we've expanded in powers of $\vec r'$. The minus signs are correct here---
 which has our monopole moment and dipole moment terms written out explicitly. Note that in the magnetic case, there's no equivalent to the discrete sums we had in electrostatics. There, we considered point charges, but there are no monopoles in our theory of magnetism. Indeed, the $1/r$ term should vanish since we're integrating the current flowing around closed loops, i.e. the integral of the vector pointing around these closed loops is zero.
 
 We can be slightly more formal. Let us write%
-    \footnote{One way to make this guess is to suppose that the thing we take the divergence of should have an extra factor of $r'$ in it.}
+    \footnote{One way to make this guess is to suppose that the quantity we take the divergence of should have an extra factor of $r'$ in it.}
 \begin{equation}
     \grad'\cdot (\vec j r_k') = r_k' \grad' \cdot \vec j(\vec r') + \vec j(\vec r') \cdot \underbrace{\grad' r_k'}_{\uv r_k'} = j_k(\vec r'),
 \end{equation}
