--- a/winter/200B/2020/02/20200227.tex
+++ b/winter/200B/2020/02/20200227.tex
@@ -135,7 +135,7 @@ and a total magnetic moment $\vec m$ which \emph{includes} the orbital part, so 
     \vec m = \frac{1}{2} \int d^3 r(\vec r \times \text{``$\vec j$''})
 \end{equation}
 where ``$\vec j$'' indicates a sum of $\vec j$ and $\vec K$, any internal and surface currents.%
-    \footnote{The units don't quite match, hence the quotation marks, but this can be made sensible.}
+    \footnote{The units don't quite match, hence the quotation marks, but this can be made more formal.}
 Equivalently
 \begin{equation}
     \vec m = \int_V d^3 \vec M,
