--- a/winter/204B/204B-notes-ucd.tex
+++ b/winter/204B/204B-notes-ucd.tex
@@ -80,12 +80,12 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
 \section{Friday, March 6, 2020}
     \input{2020/03/20200306.tex}
 
-% % week 10
-% \section{Monday, March 9, 2020}
-% 	\input{2020/03/20200309.tex}
-% \section{Wednesday, March 11, 2020}
-%     \input{2020/03/20200311.tex}
-% \section{Friday, March 13, 2020}
-%     \input{2020/03/20200313.tex}
+% week 10
+\section{Monday, March 9, 2020}
+	\input{2020/03/20200309.tex}
+\section{Wednesday, March 11, 2020}
+    \input{2020/03/20200311.tex}
+\section{Friday, March 13, 2020}
+    \input{2020/03/20200313.tex}
 
 \end{document}
